refactor through extractions of tests, configs, and errors

--- a/rust_chat_app/Cargo.toml
+++ b/rust_chat_app/Cargo.toml
@@ -3,6 +3,13 @@ name = "rust_chat_app"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+name = "chat_server"
+path = "src/main.rs"
+
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 thiserror = "2.0"
